@@ -6,6 +6,14 @@ class PaymentezTest < Test::Unit::TestCase
   def setup
     @gateway = PaymentezGateway.new(application_code: 'foo', app_key: 'bar')
     @credit_card = credit_card
+    @elo_credit_card = credit_card('6362970000457013',
+      :month => 10,
+      :year => 2020,
+      :first_name => 'John',
+      :last_name => 'Smith',
+      :verification_value => '737',
+      :brand => 'elo'
+    )
     @amount = 100
 
     @options = {
@@ -24,6 +32,16 @@ class PaymentezTest < Test::Unit::TestCase
     assert_success response
 
     assert_equal 'PR-926', response.authorization
+    assert response.test?
+  end
+
+  def test_successful_purchase_with_elo
+    @gateway.expects(:ssl_post).returns(successful_purchase_with_elo_response)
+
+    response = @gateway.purchase(@amount, @elo_credit_card, @options)
+    assert_success response
+
+    assert_equal 'CI-14952', response.authorization
     assert response.test?
   end
 
@@ -63,6 +81,15 @@ class PaymentezTest < Test::Unit::TestCase
     assert response.test?
   end
 
+  def test_successful_authorize_with_elo
+    @gateway.stubs(:ssl_post).returns(successful_authorize_with_elo_response)
+
+    response = @gateway.authorize(@amount, @elo_credit_card, @options)
+    assert_success response
+    assert_equal 'CI-14953', response.authorization
+    assert response.test?
+  end
+
   def test_successful_authorize_with_token
     @gateway.stubs(:ssl_post).returns(successful_authorize_response)
 
@@ -86,6 +113,15 @@ class PaymentezTest < Test::Unit::TestCase
     response = @gateway.capture(nil, '1234', @options)
     assert_success response
     assert_equal 'CI-635', response.authorization
+    assert response.test?
+  end
+
+  def test_successful_capture_with_elo
+    @gateway.expects(:ssl_post).returns(successful_capture_with_elo_response)
+
+    response = @gateway.capture(nil, '1234', @options)
+    assert_success response
+    assert_equal 'CI-14953', response.authorization
     assert response.test?
   end
 
@@ -153,6 +189,14 @@ class PaymentezTest < Test::Unit::TestCase
     response = @gateway.store(@credit_card, @options)
     assert_success response
     assert_equal '14436664108567261211', response.authorization
+  end
+
+  def test_simple_store_with_elo
+    @gateway.expects(:ssl_post).returns(successful_store_with_elo_response)
+
+    response = @gateway.store(@elo_credit_card, @options)
+    assert_success response
+    assert_equal '15550938907932827845', response.authorization
   end
 
   def test_complex_store
@@ -252,6 +296,34 @@ Conn close
     '
   end
 
+  def successful_purchase_with_elo_response
+    '
+      {
+        "transaction": {
+          "status": "success",
+          "payment_date": "2019-03-06T16:47:13.430",
+          "amount": 1,
+          "authorization_code": "TEST00",
+          "installments": 1,
+          "dev_reference": "Testing",
+          "message": "Response by mock",
+          "carrier_code": null,
+          "id": "CI-14952",
+          "status_detail": 3
+        },
+        "card": {
+          "bin": "636297",
+          "expiry_year": "2020",
+          "expiry_month": "10",
+          "transaction_reference": "CI-14952",
+          "type": "el",
+          "number": "7013",
+          "origin": "Paymentez"
+        }
+      }
+    '
+  end
+
   def failed_purchase_response
     '
       {
@@ -303,6 +375,36 @@ Conn close
           "transaction_reference": "CI-635",
           "type": "vi",
           "number": "1111"
+        }
+      }
+    '
+  end
+
+  def successful_authorize_with_elo_response
+    '
+      {
+        "transaction": {
+          "status": "success",
+          "payment_date": "2019-03-06T16:53:36.336",
+          "amount": 1,
+          "authorization_code": "TEST00",
+          "installments": 1,
+          "dev_reference": "Testing",
+          "message": "Response by mock",
+          "carrier_code": null,
+          "id": "CI-14953",
+          "status_detail": 0
+        },
+        "card": {
+          "bin": "636297",
+          "status": "",
+          "token": "",
+          "expiry_year": "2020",
+          "expiry_month": "10",
+          "transaction_reference": "CI-14953",
+          "type": "el",
+          "number": "7013",
+          "origin": "Paymentez"
         }
       }
     '
@@ -367,6 +469,36 @@ Conn close
     '
   end
 
+  def successful_capture_with_elo_response
+    '
+      {
+        "transaction": {
+          "status": "success",
+          "payment_date": "2019-03-06T16:53:36",
+          "amount": 1,
+          "authorization_code": "TEST00",
+          "installments": 1,
+          "dev_reference": "Testing",
+          "message": "Response by mock",
+          "carrier_code": null,
+          "id": "CI-14953",
+          "status_detail": 3
+        },
+        "card": {
+          "bin": "636297",
+          "status": "",
+          "token": "",
+          "expiry_year": "2020",
+          "expiry_month": "10",
+          "transaction_reference": "CI-14953",
+          "type": "el",
+          "number": "7013",
+          "origin": "Paymentez"
+        }
+      }
+    '
+  end
+
   def failed_capture_response
     '{"error": {"type": "Carrier not supported", "help": "", "description": "{}"}}'
   end
@@ -392,6 +524,10 @@ Conn close
 
   def successful_store_response
     '{"card": {"bin": "411111", "status": "valid", "token": "14436664108567261211", "message": "", "expiry_year": "2018", "expiry_month": "9", "transaction_reference": "PR-959", "type": "vi", "number": "1111"}}'
+  end
+
+  def successful_store_with_elo_response
+    '{"card": {"bin": "636297", "status": "valid", "token": "15550938907932827845", "message": "", "expiry_year": "2020", "expiry_month": "10", "transaction_reference": "CI-14956", "type": "el", "number": "7013", "origin": "Paymentez"}}'
   end
 
   def failed_store_response
